[metadata]
name = akramms
version = 1.1.0
author = Elizabeth Fischer
author_email = eafischer2@alaska.edu
description = Alaska Large Scale Avalanches
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlaskaLargeScaleSnowAvalanche/akramms
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: ???
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .

